Resolves: tdf#100950 only update page selection if pages changed

Change-Id: Ibe1c37c0b44bc1925df4810039fca874fb6c8e93