sd/source/ui/slidesorter/inc/controller/SlsSelectionObserver.hxx
@@ -66,6 +66,7 @@ public:
 private:
     SlideSorter& mrSlideSorter;
     bool mbIsOvservationActive;
+    bool mbPageEventOccurred;
 
     ::std::vector<const SdPage*> maInsertedPages;
 };
